--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Jia-Lin Hau (Monkie)</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -40,58 +40,67 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Jia-Lin Hau
+                        <span class="text-primary">Monkie</span>
                     </h1>
-                    <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                    <div class="lead mb-5">
+                        83 Main street, GSS 4198, Durham, 03824 NH · (603) 866-4273 ·
+                        <a href="mailto:JiaLin.Hau@unh.edu">JiaLin.Hau@unh.edu</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">
+                        I am currently a Ph.D student in <a href="http://cs.unh.edu">Computer Science at University of New Hampshire</a> (UNH), 
+                        a member of the <a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a> (RLsquared) and my advisor is : <a href="http://rl2.cs.unh.edu/">Marek Petrik</a>.
+                        My research mainly focus on risk averse data driven decision making.
+                    <p class="lead mb-5">    
+                        I am highly interested in Actuarial Science, Machine learning, Bayesian Statistics, A.I and optimization related topics. Beside learning and coding, I like to travel, running long distance, play computer games, and basketball.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/jia-lin-hau-b61730129/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/MonkieDein"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://gitlab.com/MonkieDein"><i class="fab fa-gitlab"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/MonkieHau/"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
+            <!-- Professional Services-->
+            <section class="resume-section" id="Processional Services">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Processional Services</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Research Assistant</h3>
+                            <div class="subheading mb-3"><a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a></div> 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Teaching Assistant</h3>
+                            <div class="subheading mb-3"><a href="http://cs.unh.edu">Department of Computer Science at UNH</a></div>
+                            Spring 2020
+                            <ul>
+                                <li>CS 520   - Assembly language programming and machine organization</li>
+                                <li>CS 410P - Introduction to scientific programming in Python  </li>
+                            </ul>
+                            Fall 2019
+                            <ul>
+                                <li>CS 410C - Introduction to scientific programming in C</li>
+                                <li>CS 725   - Computer networks </li>
+                            </ul>
+                            Spring 2019
+                            <ul>
+                                <li>CS 410P - Introduction to scientific programming in Python</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2019 - Spring 2020</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Reviewing Services</h3>
+                            <div class="subheading mb-3">International Conference on Machine Learning 2022 (ICML)</div>
+                            <div class="subheading mb-3">NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems
+                            </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
             </section>
