Skills, Leadership, Education, Projects
Change Skills, Leadership, Education, Projects pages to my own information

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="author" content="" />
         <title>Resume - Start Bootstrap Theme</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -111,20 +113,19 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of New Hampshire</h3>
+                            <div class="subheading mb-3">B.S. in Applied Mathematics: Economics</div>
+                            <div>Summa Cum Laude (Dean's list)</div>
+                            <p>GPA: 3.89/4.0</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug 2015 - May 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Sabah Tshung Tsin Secondary School</h3>
+                            <div class="subheading mb-3">Track and field (800m, 1500m, 5000m), concert band (Trumpet) </div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2011 - May 2015</span></div>
                     </div>
                 </div>
             </section>
@@ -136,46 +137,77 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-git"></i></li>
+                        <li class="list-inline-item"><i class="devicon-r-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-matlab-plain"></i></i></li>
+                        <li class="list-inline-item"><i class="devicon-julia-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-c-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-markdown-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-bash-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-mysql-plain"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
+                    <div class="subheading mb-3">Coursework</div>
+                    Multi-dimensional calculus, Differential equation, Linear algebra, Probability and stochastic, 
+                    Financial mathematics, Forecasting Analysis, Machine Learning, Econometrics, Numerical method,
+                    Advance Machine Learning, Algorithms, Cyber-security, Database (SQL).
+                    <p></p>
+                    <p></p>
+                    <div class="subheading mb-3">Communcational Language</div>
+                    Mandarin, Cantonese, English, Malay, and some other dialects (Hakka, Hokkien).
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <!-- Leadership-->
+            <section class="resume-section" id="leadership">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">Leadership Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Junior Instructor & Summer Camp Resident Assistant</h3>
+                            <div class="subheading mb-3">Idea Math</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - Aug 2020</span></div>
+                    </div>
+                    <ul>
+                        <li>Trained K-12 students for Mathematics competition with challenging questions to enhance their problem-solving skills.</li>
+                        <li>Created study plans for the class and conducted group activities with students to assure they are motivated to learn.</li>
+                        <li>Structured activities and events for residential students to support a good experience and healthy lifestyle.</li>
+                    </ul>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Vice President of UNH International Student Organization</h3>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2017 - Jun 2018</span></div>
+                    </div>
+                    <ul>
+                        <li>Plan events to raise cultural awareness. </li>
+                        <li>Reach out and collaborate with other organizations and learn others culture.</li>
+                        <li>Allocated tasks for volunteers and executive members based on their unique advantages.</li>
+                    </ul>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">UNH Mathematics Center Tutor</h3>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug 2017 - Jun 2018</span></div>
+                    </div>
+                    <ul>
+                        <li>Clarified Mathematics concepts and assisted students who are having trouble with their homework. </li>
+                        <li>Organized a study plan for students to catch up with class content and learn more effectively.</li>
+                        <li>Conducted review sessions to help students prepare for exams and quizzes.</li>
+                    </ul>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">UNH Residential Assistant  </h3>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug 2017 - Jun 2018</span></div>
+                    </div>
+                    <ul>
+                        <li>Structured weekly social with 11 Co-Resident Assistants to maximize positive resident interaction and develop an
+                            inclusive community among 500 residents.</li>
+                        <li>Responsible for critical knowledge such as proper protocol involving responding to alcohol intoxication, roommate issues, and residents personal issues.</li>
+                        <li>Communicated and related well with residents, staff, housekeepers, and maintenance personnel.</li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
@@ -223,6 +255,37 @@
                             Place - James Buchanan High School - Hackathon 2005
                         </li>
                     </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Projects and Reports-->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects and Reports</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Robust Pest Management [<a href="">poster</a>] [<a href="">slide</a>]</h3>
+                            <div class="subheading mb-3">Talha Siddique, Jia Lin Hau, Shadi Atallah, Marek Petrik</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Aug 2018 - Mar 2019</span></div>
+                    </div>
+                    Utilized STAN Bayesian statistical inference with MCMC sampling to capture prior knowledge, generate more possible data points, and compute the optimal Robust MDP policy via policy iteration.
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Cryptocurrency Analytics [<a href="">report</a>]</h3>
+                            <div class="subheading mb-3">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2018 - May 2019</span></div>
+                    </div>
+                    Predicted cryptocurrency with time series analysis method VAR on the log return of the closing price.
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">MDP on Blackjack [<a href="">slide</a>]</h3>
+                            <div class="subheading mb-3">Jia Lin Hau, Marek Petrik</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2018 - Jul 2019</span></div>
+                    </div>
+                    Utilized MDP (Value Iteration) to solve for the optimal action (Stand, Hit, Split, Double, or Surrender) for BlackJack with R.
                 </div>
             </section>
         </div>
