--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <h2 class="mb-5">Projects and Reports</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Robust Pest Management [<a href="">poster</a>] [<a href="">slide</a>]</h3>
+                            <h3 class="mb-0">Robust Pest Management [<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_08045e06d83f42ec8d5c2841dc362312.pdf">poster</a>] [<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_9186ac74efc241768de2d7b0ec37094c.pdf">slide</a>]</h3>
                             <div class="subheading mb-3">Talha Siddique, Jia Lin Hau, Shadi Atallah, Marek Petrik</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2018 - Mar 2019</span></div>
@@ -272,7 +272,7 @@
                     Utilized STAN Bayesian statistical inference with MCMC sampling to capture prior knowledge, generate more possible data points, and compute the optimal Robust MDP policy via policy iteration.
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Cryptocurrency Analytics [<a href="">report</a>]</h3>
+                            <h3 class="mb-0">Cryptocurrency Analytics [<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_1c7854460c1a4afe934fea28dce63e3b.pdf">report</a>]</h3>
                             <div class="subheading mb-3">Jia Lin Hau, Gerasimos Mouikis, Spencer Pope</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb 2018 - May 2019</span></div>
@@ -280,7 +280,7 @@
                     Predicted cryptocurrency with time series analysis method VAR on the log return of the closing price.
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">MDP on Blackjack [<a href="">slide</a>]</h3>
+                            <h3 class="mb-0">MDP on Blackjack [<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_8dec113dd0004c57bbc56f772a8b0a17.pdf">slide</a>]</h3>
                             <div class="subheading mb-3">Jia Lin Hau, Marek Petrik</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Jan 2018 - Jul 2019</span></div>
