--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Processional Services">Processional Services</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#leadership">Leadership</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -215,53 +216,73 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Marathon</h3>
+                    </div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Place (Co-ed Relay) - 2016 Manchester City Marathon by SNHU
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            4
+                            <sup>th</sup> Place (division M0119) - 2015 Seacoast Half Marathon in Portsmouth
+                        </li>
+                    </ul>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Scuba Diving</h3>
+                    </div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Certified - 2019 NAUI Open Water Scuba Diver
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                            Certified - 2013 PADI Advance Open Water Diver 
+                        </li>
+                    </ul>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Actuarial Science</h3>
+                    </div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Passed - 2018 Actuarial Science Exam P: Probability
+                        </li>
+                    </ul>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Finance</h3>
+                    </div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Certified - 2018 Bloomberg Market Concepts (BMC) Completion  
+                        </li>
+                    </ul>
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Pitch</h3>
+                    </div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Semi-finalist - UNH 2017 Fall stock pitch competition ~ WTI (strong buy)  [<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_3a409e12dbaf47a592db46ea6de923da.pdf">slide</a>]
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            Semi-finalist - UNH 2019 Holloway prize competition ~ Emoai (AI facial recognition apps prevent depression)  [<a href="https://www.youtube.com/watch?v=CrPHfAZ59tE">video</a>] Shayan Amani, Jia Lin Hau, Chao Chi Cheng, Lekyang Sai
                         </li>
                     </ul>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Projects and Reports-->
+            <!-- Class Projects-->
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Projects and Reports</h2>
+                    <h2 class="mb-5">Class Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Robust Pest Management [<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_08045e06d83f42ec8d5c2841dc362312.pdf">poster</a>] [<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_9186ac74efc241768de2d7b0ec37094c.pdf">slide</a>]</h3>
