--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#leadership">Leadership</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#download">Download</a></li>
                 </ul>
             </div>
         </nav>
@@ -307,6 +308,13 @@
                         <div class="flex-shrink-0"><span class="text-primary">Jan 2018 - Jul 2019</span></div>
                     </div>
                     Utilized MDP (Value Iteration) to solve for the optimal action (Stand, Hit, Split, Double, or Surrender) for BlackJack with R.
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Download-->
+            <section class="resume-section" id="download">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">[<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_6b61fa90afaa4c17955d5af35329cdfe.pdf">Click here to download</a>]</h2>
                 </div>
             </section>
         </div>
