--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                     <p class="lead mb-5">
                         I am currently a Ph.D student in <a href="http://cs.unh.edu">Computer Science at University of New Hampshire</a> (UNH), 
-                        a member of the <a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a> (RLsquared) and my advisor is : <a href="http://rl2.cs.unh.edu/">Marek Petrik</a>.
+                        a member of the <a href="http://rl2.cs.unh.edu/">Reinforcement Learning and Robustness Lab</a> (RLsquared) and my advisor is : <a href="https://marek.petrik.us/">Marek Petrik</a>.
                         My research mainly focus on risk averse data driven decision making.
                     <p class="lead mb-5">    
                         I am highly interested in Actuarial Science, Machine learning, Bayesian Statistics, A.I and optimization related topics. Beside learning and coding, I like to travel, running long distance, play computer games, and basketball.</p>
@@ -137,17 +137,19 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
+                    Latex, R, git, Markdown, bash, Python, C, C++, mySQL, Html, Matlab, Julia, JMP, Tableau.
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-git"></i></li>
+                        <li class="list-inline-item"><i class="devicon-latex-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-r-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-matlab-plain"></i></i></li>
-                        <li class="list-inline-item"><i class="devicon-julia-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-c-plain"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-git"></i></li>
                         <li class="list-inline-item"><i class="devicon-markdown-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-bash-plain"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="devicon-c-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-mysql-plain"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="devicon-matlab-plain"></i></i></li>
+                        <li class="list-inline-item"><i class="devicon-julia-plain"></i></li>
                     </ul>
                     <div class="subheading mb-3">Coursework</div>
                     Multi-dimensional calculus, Differential equation, Linear algebra, Probability and stochastic, 
