--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <!-- Download-->
             <section class="resume-section" id="download">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">[<a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_6b61fa90afaa4c17955d5af35329cdfe.pdf">Click here to download</a>]</h2>
+                    <h2 class="mb-5">[<a href="https://github.com/MonkieDein/CV/blob/main/assets/documents/2022CV.pdf">Click here to download</a>]</h2>
                 </div>
             </section>
         </div>
