typo and contact
remove number and address

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                         <span class="text-primary">Monkie</span>
                     </h1>
                     <div class="lead mb-5">
-                        83 Main street, GSS 4198, Durham, 03824 NH · (603) 866-4273 · 
-                        <a href="mailto:JiaLin.Hau@unh.edu">JiaLin.Hau@unh.edu</a>
+                        Computer Science Ph.D candidate · University of New Hampshire · <a href="mailto:JiaLin.Hau@gmail.edu">JiaLin.Hau@gmail.edu</a>
                     </div>
                     <p class="lead mb-5">
                         I am currently a Ph.D candidate in <a href="http://cs.unh.edu">Computer Science at University of New Hampshire</a> (UNH), 
@@ -74,7 +73,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of New Hampshire</h3>
-                            <div class="subheading mb-3">M.S. / Ph.D in Computer Science</div>
+                            <div class="subheading mb-3">M.S. / Ph.D. in Computer Science</div>
                             <div>Reinforcement Learning and Robustness Lab (RLsquared)</div>
                             <p>GPA: 4.0/4.0</p>
                         </div>
@@ -150,8 +149,10 @@
                     <div class="flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Reviewing Services</h3>
-                            <div class="subheading mb-3">International Conference on Machine Learning 2022 (ICML)</div>
-                            <div class="subheading mb-3">NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems
+                            <ul> 
+                                <li>International Conference on Machine Learning 2022 (ICML)</li>
+                                <li>NeurIPS 2021 Workshop on Safe and Robust Control of Uncertain Systems</li>
+                            </ul>
                             </div>
                         </div>
                     </div>
