--- a/index.html
+++ b/index.html
@@ -134,14 +134,16 @@
                     <h2 class="mb-5">Professional Services</h2>
                     <div class="flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Archival Publication</h3>
+                            <!-- <h3 class="mb-0">Archival Publication</h3>
                             <ul> 
-                                <li><a href="https://arxiv.org/abs/2209.04067">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
-                                <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
-                            </ul> 
+                                
+                            </ul>  -->
                             <h3 class="mb-0">Non-Archival Publication</h3>
                             <ul> 
-                                <li><a href="https://marek.petrik.us/pub/Siddique2019.pdf">Robust pest management using Reinforcement Learning.</a> Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik, RLDM 2019 <a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_08045e06d83f42ec8d5c2841dc362312.pdf"> Poster </a></li>
+                                <li><a href="https://arxiv.org/abs/2209.04067">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
+                                    <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
+                                <li><a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_08045e06d83f42ec8d5c2841dc362312.pdf">Robust pest management using Reinforcement Learning.</a> Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik, 
+                                    RLDM 2019 Poster
                             </ul> 
                         
                         </div>
