--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <div>Reinforcement Learning and Robustness Lab (RLsquared)</div>
                             <p>GPA: 4.0/4.0</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Current</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -224,9 +224,9 @@
                         <div class="flex-shrink-0"><span class="text-primary">Jun 2019 - Aug 2020</span></div>
                     </div>
                     <ul>
-                        <li>Trained K-12 students for Mathematics competition with challenging questions to enhance their problem-solving skills.</li>
-                        <li>Created study plans for the class and conducted group activities with students to assure they are motivated to learn.</li>
-                        <li>Structured activities and events for residential students to support a good experience and healthy lifestyle.</li>
+                        <li>Enhance elementary schoool students problem-solving skills for Mathematics competition.</li>
+                        <li>Created study plans for the class and conducted group activities with students.</li>
+                        <li>Structured activities and events for residential students.</li>
                     </ul>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -236,8 +236,7 @@
                         <div class="flex-shrink-0"><span class="text-primary">May 2017 - Jun 2018</span></div>
                     </div>
                     <ul>
-                        <li>Plan events to raise cultural awareness. </li>
-                        <li>Reach out and collaborate with other organizations and learn others culture.</li>
+                        <li>Collaborated with other organizations to spread culture awareness.</li>
                         <li>Allocated tasks for volunteers and executive members based on their unique advantages.</li>
                     </ul>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
@@ -248,9 +247,9 @@
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2017 - Jun 2018</span></div>
                     </div>
                     <ul>
-                        <li>Clarified Mathematics concepts and assisted students who are having trouble with their homework. </li>
-                        <li>Organized a study plan for students to catch up with class content and learn more effectively.</li>
-                        <li>Conducted review sessions to help students prepare for exams and quizzes.</li>
+                        <li>Clarified Mathematics concepts and assisted students with their homework.</li>
+                        <li>Organized a study plan and helped students to catch up with class content.</li>
+                        <li>Conducted review sessions to help students prepare for quizzes and exams.</li>
                     </ul>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -260,8 +259,7 @@
                         <div class="flex-shrink-0"><span class="text-primary">Aug 2016 - Jun 2017</span></div>
                     </div>
                     <ul>
-                        <li>Structured weekly social with 11 Co-Resident Assistants to maximize positive resident interaction and develop an
-                            inclusive community among 500 residents.</li>
+                        <li>Structured social activities, created safe and supportive environment for 500 residents. </li>
                         <li>Responsible for critical knowledge such as proper protocol involving responding to alcohol intoxication, roommate issues, and residents personal issues.</li>
                         <li>Communicated and related well with residents, staff, housekeepers, and maintenance personnel.</li>
                     </ul>
