--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
             <!-- Download-->
             <section class="resume-section" id="download">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">[<a href="https://monkiedein.github.io/CV/assets/documents/2022CV.pdf">CV</a>]</h2>
+                    <h2 class="mb-5">[<a href="https://monkiedein.github.io/CV/assets/documents/JiaLinHau_CV.pdf">CV</a>]</h2>
                 </div>
                 <div class="resume-section-content">
-                    <h2 class="mb-5">[<a href="https://monkiedein.github.io/CV/assets/documents/Modern Resume.pdf">Resume</a>]</h2>
+                    <h2 class="mb-5">[<a href="https://monkiedein.github.io/CV/assets/documents/Modern Resume.pdf">Fancy Resume</a>]</h2>
                 </div>
             </section>
         </div>
