--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
                             </ul>  -->
                             <h3 class="mb-0">Non-Archival Publication</h3>
                             <ul> 
+                                <li><a href="https://virtual.aistats.org/virtual/2023/poster/5483">Entropic Risk Optimization in Discounted MDPs.</a>
+                                    <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, AISTATS 2023</li>
                                 <li><a href="https://arxiv.org/abs/2209.04067">RASR: Risk-Averse Soft-Robust MDPs with EVaR and Entropic Risk.</a>
                                     <b>Jia Lin Hau</b>, Marek Petrik, Mohammad Ghavamzadeh, Reazul Russel, Arxiv 2022</li>
                                 <li><a href="https://df660d53-db22-4dff-8899-56fa7ce1f7a8.filesusr.com/ugd/729039_08045e06d83f42ec8d5c2841dc362312.pdf">Robust pest management using Reinforcement Learning.</a> Talha Siddique, <b>Jia Lin Hau</b>, Shadi Atallah, Marek Petrik, 
@@ -339,7 +341,7 @@
                     <h2 class="mb-5">[<a href="https://monkiedein.github.io/CV/assets/documents/JiaLinHau_CV.pdf">CV</a>]</h2>
                 </div>
                 <div class="resume-section-content">
-                    <h2 class="mb-5">[<a href="https://monkiedein.github.io/CV/assets/documents/Modern Resume.pdf">Fancy Resume</a>]</h2>
+                    <h2 class="mb-5">[<a href="https://monkiedein.github.io/CV/assets/documents/JialinHauResume.pdf">1 Page Resume</a>]</h2>
                 </div>
             </section>
         </div>
