--- a/index.html
+++ b/index.html
@@ -73,16 +73,24 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of New Hampshire</h3>
-                            <div class="subheading mb-3">M.S. / Ph.D. in Computer Science</div>
+                            <div class="subheading mb-3">Ph.D. in Computer Science</div>
                             <div>Reinforcement Learning and Robustness Lab (RLsquared)</div>
                             <p>GPA: 4.0/4.0</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Present (Expect 2024)</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of New Hampshire</h3>
-                            <div class="subheading mb-3">B.S. in Applied Mathematics: Economics</div>
+                            <div class="subheading mb-3"><a href="https://monkiedein.github.io/CV/assets/documents/CeDiD 23ZJ-41VZ-JGUS Ji.pdf">M.S. in Computer Science</a></div>
+                            <p>GPA: 4.0/4.0</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2019 - Dec 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">University of New Hampshire</h3>
+                            <div class="subheading mb-3"><a href="https://monkiedein.github.io/CV/assets/documents/CeDiD 189A-B83B-J9U5 Ji.pdf">B.S. in Applied Mathematics: Economics</a></div>
                             <div>Summa Cum Laude (Dean's list)</div>
                             <p>GPA: 3.89/4.0</p>
                         </div>
